--- a/lab/app/src/main/res/values/strings.xml
+++ b/lab/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">LabLearnAndroid</string>
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_list">LIstActivity</string>
+    <string name="title_activity_menu">MenuActivity</string>
 </resources>
