SharedPreferences and pokemonAPI

--- a/lab/app/src/main/res/values/strings.xml
+++ b/lab/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_activity_main2">MainActivity2</string>
     <string name="title_activity_list">LIstActivity</string>
     <string name="title_activity_menu">MenuActivity</string>
+    <string name="title_activity_shared_preferences">SharedPreferencesActivity</string>
 </resources>
